[package]
name = "lvlgen"
version = "0.1.0"
authors = ["Adam M Ludvik <adam.m.ludvik@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
clap = "2"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "0.15"
